# claude-code-optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claudei.sh  pyproject.toml  run.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/workflows/: cc-optimizer.js
.githooks/: pre-commit
optimizer/: __init__.py  analyze.py  apply.py  apply2.py  briefs.py  cost.py  inventory.py  knowledge-base.json  main.py  merge.py  recommend.py  report.py  verify_apply.py
skills/cc-optimizer-analyze/: SKILL.md
skills/cc-optimizer-apply/: SKILL.md
skills/cc-optimizer-inventory/: SKILL.md
skills/cc-optimizer-run/: SKILL.md
